Fix: menu colors on mobile (#242)

--- a/src/containers/Header/Header.pcss
+++ b/src/containers/Header/Header.pcss
@@ -74,7 +74,7 @@ header {
       height: 30px;
       display: block;
       &-item {
-        background: var(--text-light-grey);
+        background: var(--navbar-text-color);
         display: block;
         width: 30px;
         height: 3px;
