--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -277,7 +277,7 @@
 
         &--active {
           border: none;
-          color: var(--base-6);
+          color: var(--navbar-text-color);
           font-weight: 500;
         }
       }
